# DMM

./: Cargo.toml  README.md
dmm-format/: Cargo.toml
dmm-format/src/: error.rs  lib.rs
dmm-format/src/de/: mod.rs
dmm-format/src/de/parse/: datum.rs  dictionary.rs  dmm.rs  literal.rs  mod.rs  var_edit.rs
dmm-format/tests/: test_parse.rs
src/: lib.rs
